cargo-features = ["edition"]
[package]
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
name = "cogg-hook"
version = "0.1.0"


[lib]
name = "gghook"
path = "src/lib.rs"
crate-type = ["cdylib"] # C Dynamic Lib

[dependencies]
bytes = "0.4.9"
colored = "1.6"
env_logger = "0.5.11"
failure = "0.1.2"
failure_derive = "0.1.1"
futures = "0.1.23"
json = "0.11.13"
log = "0.4.3"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
toml = "0.4.6"
winapi = { version = "0.3", features = ["winuser"] }
