cargo-features = ["edition"]
[package]
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
name = "cogg"
version = "0.1.0"
build = "build.rs"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "ggserver"
path = "src/server/server.rs"

[[bin]]
name = "ggclient"
path = "src/client/client.rs"

[dependencies]
bytes = "0.4.10"
colored = "1.6"
env_logger = "0.5.13"
failure = "0.1.2"
failure_derive = "0.1.2"
futures = "0.1.24"
json = "0.11.13"
log = "0.4.5"
serde = "1.0.78"
serde_derive = "1.0.78"
serde_json = "1.0.27"
toml = "0.4.6"
protobuf = "2.0.4"
tokio = "0.1.8"
grpcio = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
fshash = { path = "../fshash" }

[build-dependencies]
protoc-grpcio = "0.2.0"